# gouttelette

./: .yamllint  CHANGELOG.rst  LICENSE.rst  README.md  README.rst  gouttelette.yml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
gouttelette/: gouttelette.yml  utils.py
gouttelette/cmd/: content_library_data.py  generator.py  refresh_examples.py  refresh_ignore_files.py  refresh_modules.py  refresh_schema.py  resources.py
gouttelette/config/amazon_cloud/: modules.yaml
gouttelette/config/vmware_rest/: modules.yaml
gouttelette/data/tests/integration/targets/s3/tasks/: main.yml
gouttelette/module_utils/: vmware_rest.py
gouttelette/templates/amazon_cloud/: header.j2
gouttelette/templates/vmware_rest/: default_module.j2  info_list_and_get_module.j2  info_no_list_module.j2
tests/cmd/: test_refresh_examples.py
tests/unit/cmd/: test_generator.py  test_refresh_modules.py
tests/unit/cmd/fixtures/: modules.yaml
tests/unit/utils/: test_utils.py
tests/utils/: test_utils.py
