[metadata]
name = gouttelette
version = attr: gouttelette.VERSION
description = Gouttelette comes with shared modules for Ansible code generators
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = cloud
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
