[metadata]
name = gouttelette
version = attr: gouttelette.VERSION
description = Gouttelette comes with shared modules for Ansible code generators
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
url = https://github.com/ansible-collections/gouttelette
keywords = cloud
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    importlib-metadata; python_version<"3.8"
    ruamel.yaml
    jinja2
    PyYAML
    baron
    redbaron
    boto3
    pbr

[options.package_data]
* = *.txt, *.rst, *.yml, *.yaml, *.json, *.j2, */*
hello = *.msg


[options.entry_points]
console_scripts =
    gouttelette-refresh-examples = gouttelette.cmd.refresh_examples:main
    gouttelette-refresh-schema = gouttelette.cmd.refresh_schema:main
    gouttelette-refresh-modules = gouttelette.cmd.refresh_modules:main
    gouttelette-refresh-ignore-files = gouttelette.cmd.refresh_ignore_files:main

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
